objects/Offer__c.object
<CustomObject>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The AM with the highest $ amount SO associated to this offer. (if available)</inlineHelpText>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adopt_Timestamp__c</fullName>
        <label>Adopt Timestamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adoption_Barrier_Comment__c</fullName>
        <inlineHelpText>Please provide additional details for the adoption barrier(s) you have selected</inlineHelpText>
        <label>Adoption Barrier Comment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adoption_Barrier__c</fullName>
        <label>Adoption Barrier</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engaged - All going well</fullName>
                </value>
                <value>
                    <fullName>Engaged - Experiencing licensing issues</fullName>
                </value>
                <value>
                    <fullName>Engaged - Experiencing configuration issues</fullName>
                </value>
                <value>
                    <fullName>Engaged - Experiencing installation/migration issues</fullName>
                </value>
                <value>
                    <fullName>Engaged - Experiencing architecture/design issues</fullName>
                </value>
                <value>
                    <fullName>Engaged - Experiencing equipment compatibility issues</fullName>
                </value>
                <value>
                    <fullName>Engaged - Experiencing adoption issues</fullName>
                </value>
                <value>
                    <fullName>Engaged - Experiencing quality issues</fullName>
                </value>
                <value>
                    <fullName>Engaged - Experiencing reliability issues</fullName>
                </value>
                <value>
                    <fullName>Engaged - Experiencing training issues</fullName>
                </value>
                <value>
                    <fullName>Not Engaged - Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Not Engaged - Contact not known</fullName>
                </value>
                <value>
                    <fullName>Not Engaged - Contact changed </fullName>
                </value>
                <value>
                    <fullName>Not Engaged - Org restructure / M&amp;A</fullName>
                </value>
                <value>
                    <fullName>Not Engaged - Not a priority/resources not funded</fullName>
                </value>
                <value>
                    <fullName>Not Engaged - Resources not hired or trained</fullName>
                </value>
                <value>
                    <fullName>Not Engaged - Account team blocking</fullName>
                </value>
                <value>
                    <fullName>Waiting For - HW</fullName>
                </value>
                <value>
                    <fullName>Waiting For - SW/Licensing</fullName>
                </value>
                <value>
                    <fullName>Waiting For - Help from Cisco</fullName>
                </value>
                <value>
                    <fullName>Waiting For - Help from partner</fullName>
                </value>
                <value>
                    <fullName>Waiting For - Feature/enhancement</fullName>
                </value>
                <value>
                    <fullName>Waiting For - Product fix</fullName>
                </value>
                <value>
                    <fullName>No Value / Fit - Mis-sold</fullName>
                </value>
                <value>
                    <fullName>No Value / Fit - Product does not fit customer needs</fullName>
                </value>
                <value>
                    <fullName>No Value / Fit - Does not see value and plan to abandon </fullName>
                </value>
                <value>
                    <fullName>No Value / Fit - Does not see value and looking at competitor</fullName>
                </value>
                <value>
                    <fullName>ENGAGEMENT - Account team will not engage</fullName>
                    <isActive>false</isActive>
                    <label>ENGAGEMENT - Account team will not engage</label>
                </value>
                <value>
                    <fullName>ENGAGEMENT - Awaiting CSE assignment</fullName>
                    <isActive>false</isActive>
                    <label>ENGAGEMENT - Awaiting CSE assignment</label>
                </value>
                <value>
                    <fullName>ENGAGEMENT - Bad data customer did not purchase</fullName>
                    <isActive>false</isActive>
                    <label>ENGAGEMENT - Bad data customer did not purchase</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advocate_Timestamp__c</fullName>
        <label>Advocate Timestamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annual_Recurring_Revenue_ARR__c</fullName>
        <inlineHelpText>ARR represents software subscription and services</inlineHelpText>
        <label>Annual Recurring Revenue (ARR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BU_ID__c</fullName>
        <formula>Customer_BU_Name__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Name__c</fullName>
        <formula>'&lt;a href="/'+ Customer_BU_Name__c + '" title="'+Customer_BU_Name__r.Name+'"&gt;' + Customer_BU_Name__r.Name + '&lt;/a&gt;'</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C360Offer_Ref__c</fullName>
        <externalId>true</externalId>
        <label>C360Offer Ref</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_BU_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer BU Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <formula>Customer_Name__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Offers (Customer Name)</relationshipLabel>
        <relationshipName>Offers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_has_deployment_plans__c</fullName>
        <label>Customer has deployment plans?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNA_Center_Controller_Version__c</fullName>
        <inlineHelpText>Indicates DNAC version or software on device.</inlineHelpText>
        <label>DNA Center Controller Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Upgrade__c</fullName>
        <inlineHelpText>Date of last upgrade</inlineHelpText>
        <label>Date of Last Upgrade</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_in_Stage__c</fullName>
        <formula>IF(ISPICKVAL(Offer_Stages__c,"Purchase"),TEXT(Today() - DATEVALUE(CreatedDate)),
IF(ISPICKVAL(Offer_Stages__c,"Onboard")&amp;&amp; NOT(ISNULL(Purchase_Timestamp__c)),TEXT(Today() - Purchase_Timestamp__c),
IF(ISPICKVAL(Offer_Stages__c,"Implement")&amp;&amp; NOT(ISNULL(Onboard_Timestamp__c)),TEXT(Today() - Onboard_Timestamp__c),
IF(ISPICKVAL(Offer_Stages__c,"Use") &amp;&amp; NOT(ISNULL(Implement_Timestamp__c)),TEXT(Today() - Implement_Timestamp__c),
IF(ISPICKVAL(Offer_Stages__c,"Engage") &amp;&amp; NOT(ISNULL(Use_Timestamp__c)),TEXT(Today() - Use_Timestamp__c),
IF(ISPICKVAL(Offer_Stages__c,"Adopt") &amp;&amp; NOT(ISNULL(Engage_Timestamp__c)),TEXT(Today() - Engage_Timestamp__c),
IF(ISPICKVAL(Offer_Stages__c,"Optimize") &amp;&amp; NOT(ISNULL(Adopt_Timestamp__c)),TEXT(Today() - Adopt_Timestamp__c),
IF(ISPICKVAL(Offer_Stages__c,"Advocate") &amp;&amp; NOT(ISNULL(Optimize_Timestamp__c)),TEXT(Today() - Optimize_Timestamp__c),null
))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engage_Timestamp__c</fullName>
        <label>Engage Timestamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_correct_licenses_based_on_use_case__c</fullName>
        <label>Has correct licenses based on use case?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_the_Offer_been_Seeded_or_Sold__c</fullName>
        <label>Has the Offer been Seeded or Sold?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Seeded</fullName>
                </value>
                <value>
                    <fullName>Purchased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISE_Version__c</fullName>
        <label>ISE Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1.0.4</fullName>
                </value>
                <value>
                    <fullName>1.1</fullName>
                </value>
                <value>
                    <fullName>1.2</fullName>
                </value>
                <value>
                    <fullName>1.3</fullName>
                </value>
                <value>
                    <fullName>1.4</fullName>
                </value>
                <value>
                    <fullName>2.0</fullName>
                </value>
                <value>
                    <fullName>2.1</fullName>
                </value>
                <value>
                    <fullName>2.2</fullName>
                </value>
                <value>
                    <fullName>2.3</fullName>
                </value>
                <value>
                    <fullName>2.4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implement_Timestamp__c</fullName>
        <label>Implement Timestamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Country__c</fullName>
        <inlineHelpText>Will show info from the contract with the next upcoming end date that is in this offer</inlineHelpText>
        <label>Install Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Customer_Name__c</fullName>
        <inlineHelpText>Will show info from the contract with the next upcoming end date that is in this offer</inlineHelpText>
        <label>Install Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Cisco_DNAC_Integrated_with_ISE_2_3__c</fullName>
        <label>Is Cisco DNAC Integrated with ISE 2.3?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Latest_Telemetry_Date__c</fullName>
        <inlineHelpText>Most recent date when data was received</inlineHelpText>
        <label>Max Latest Telemetry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Contract_Renewal_Date__c</fullName>
        <inlineHelpText>Next Contract Renewal Date will default to contract with the next upcoming end date that is in this offer</inlineHelpText>
        <label>Next Contract Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_Of_Connected_Clients_Hosts__c</fullName>
        <inlineHelpText>Total number of wired and wireless client devices (laptops, printers etc) connected to the network</inlineHelpText>
        <label>Number Of Connected Clients/Hosts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Connected_Devices__c</fullName>
        <inlineHelpText>Total number of routers, switches, WLC and access points connected to the network</inlineHelpText>
        <label>Number Of Connected Devices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Level_1_Name__c</fullName>
        <label>Offer Level 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Stages__c</fullName>
        <label>Offer Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Onboard</fullName>
                </value>
                <value>
                    <fullName>Implement</fullName>
                </value>
                <value>
                    <fullName>Use</fullName>
                </value>
                <value>
                    <fullName>Engage</fullName>
                </value>
                <value>
                    <fullName>Adopt</fullName>
                </value>
                <value>
                    <fullName>Optimize</fullName>
                </value>
                <value>
                    <fullName>Advocate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onboard_Timestamp__c</fullName>
        <label>Onboard Timestamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Onboarded_activities_completed__c</fullName>
        <label>Onboarded activities completed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Optimize_Timestamp__c</fullName>
        <label>Optimize Timestamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Initiative__c</fullName>
        <label>Partner Initiative</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <label>Partner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Pyramid__c</fullName>
        <label>Partner Pyramid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Use_Case__c</fullName>
        <label>Primary Use Case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wireless assurance (Cisco DNA Assurance)</fullName>
                </value>
                <value>
                    <fullName>Wired assurance (Cisco DNA Assurance)</fullName>
                </value>
                <value>
                    <fullName>Network segmentation (Cisco DNA SDA)</fullName>
                </value>
                <value>
                    <fullName>Converged Wired &amp; Wireless Policy and Management (Cisco DNA SDA)</fullName>
                </value>
                <value>
                    <fullName>Secure Convergence of IoT onto Enterprise Network (Cisco DNA SDA)</fullName>
                </value>
                <value>
                    <fullName>Secure Policy Creation &amp; Monitoring (Cisco ISE)</fullName>
                </value>
                <value>
                    <fullName>Device onboarding (Cisco DNA Automation)</fullName>
                </value>
                <value>
                    <fullName>SWIM and Network Provisioning (Cisco DNA Automation)</fullName>
                </value>
                <value>
                    <fullName>Transport Independence (Cisco SD-WAN)</fullName>
                </value>
                <value>
                    <fullName>Secure Cloud Edge (Cisco SD-WAN)</fullName>
                </value>
                <value>
                    <fullName>Critical Applications SLA (Cisco SD-WAN)</fullName>
                </value>
                <value>
                    <fullName>Secure Direct Internet Access (Cisco SD-WAN)</fullName>
                </value>
                <value>
                    <fullName>Location Analytics (Cisco DNA Spaces)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Timestamp__c</fullName>
        <label>Purchase Timestamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_For_Purchase__c</fullName>
        <label>Reason For Purchase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Greenfield - Assurance with Segmentation</fullName>
                </value>
                <value>
                    <fullName>Greenfield - Automation</fullName>
                </value>
                <value>
                    <fullName>Brownfield - Assurance with Segmentation</fullName>
                </value>
                <value>
                    <fullName>Brownfield - Automation</fullName>
                </value>
                <value>
                    <fullName>Brownfield - Intent Based Networking</fullName>
                </value>
                <value>
                    <fullName>Seeded in a Deal for Future Use</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stalled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stalled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <label>Subscription Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sum_Of_Cisco_Booking_Quantity__c</fullName>
        <label>Sum Of Cisco Bookings Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Of_Cisco_Bookings_Net__c</fullName>
        <label>Sum Of Cisco Bookings Net</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TECH_Last_Modified_Stage_Date__c</fullName>
        <description>Technical field use by marketing cloud, value is populated when the user change stage</description>
        <label>TECH_Last_Modified_Stage_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TECH_isOfferCanBeUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TECH_isOfferCanBeUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Telemetry_on__c</fullName>
        <label>Telemetry on?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Length__c</fullName>
        <inlineHelpText>Term Length is the average of all contract renewal dates for this offer</inlineHelpText>
        <label>Term Length</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_Support__c</fullName>
        <inlineHelpText>Tier Support will default to the highest level of support where more than one record is found</inlineHelpText>
        <label>Tier Support</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Devices_Purchased__c</fullName>
        <label>Total Devices Purchased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_License_Count__c</fullName>
        <label>Total License Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_License_In_Use__c</fullName>
        <label>Total Licenses In Use</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <label>Use Case</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wireless assurance (Cisco DNA Assurance)</fullName>
                </value>
                <value>
                    <fullName>Wired assurance (Cisco DNA Assurance)</fullName>
                </value>
                <value>
                    <fullName>Network segmentation (Cisco DNA SDA)</fullName>
                </value>
                <value>
                    <fullName>Converged Wired &amp; Wireless Policy and Management (Cisco DNA SDA)</fullName>
                </value>
                <value>
                    <fullName>Secure Convergence of IoT onto Enterprise Network (Cisco DNA SDA)</fullName>
                </value>
                <value>
                    <fullName>Secure Policy Creation &amp; Monitoring (Cisco ISE)</fullName>
                </value>
                <value>
                    <fullName>Device onboarding (Cisco DNA Automation)</fullName>
                </value>
                <value>
                    <fullName>SWIM and Network Provisioning (Cisco DNA Automation)</fullName>
                </value>
                <value>
                    <fullName>Transport Independence (Cisco SD-WAN)</fullName>
                </value>
                <value>
                    <fullName>Secure Cloud Edge (Cisco SD-WAN)</fullName>
                </value>
                <value>
                    <fullName>Critical Applications SLA (Cisco SD-WAN)</fullName>
                </value>
                <value>
                    <fullName>Secure Direct Internet Access (Cisco SD-WAN)</fullName>
                </value>
                <value>
                    <fullName>Location Analytics (Cisco DNA Spaces)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Timestamp__c</fullName>
        <label>Use Timestamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Where_is_the_equipment_located__c</fullName>
        <label>Where is the equipment located?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Contains Cisco's Product details for Customer Success Program</description>
    <label>Offer</label>
    <nameField>
        <label>Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>test_for_my_DNA_Center_only</fullName>
        <columns>Customer_BU_Name__c</columns>
        <columns>NAME</columns>
        <columns>Offer_Stages__c</columns>
        <columns>Primary_Use_Case__c</columns>
        <columns>Adoption_Barrier__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>DNA Center</value>
        </filters>
        <label>My DNA Center Offers</label>
    </listViews>
    <validationRules>
        <fullName>AccountNameEditPrevention</fullName>
        <active>true</active>
        <errorConditionFormula>(ISCHANGED(Customer_BU_Name__c )|| ISCHANGED (Name ) || ISCHANGED( Customer_Name__c )) &amp;&amp;
$Profile.Id != $Setup.ProfileID__c.Cisco_ADMIN__c &amp;&amp; 
$Profile.Id != $Setup.ProfileID__c.Cisco_Data_Migration__c &amp;&amp; 
$Profile.Id != $Setup.ProfileID__c.Cisco_Deployment_Support__c &amp;&amp; 
$Profile.Id != $Setup.ProfileID__c.Cisco_GSTS__c &amp;&amp; 
$Profile.Id != $Setup.ProfileID__c.Cisco_GSTS_Analyst__c &amp;&amp; 
$Profile.Id != $Setup.ProfileID__c.Cisco_Integration_Echo_Suppression__c</errorConditionFormula>
        <errorMessage>Customer Name and Offer Name cannot be edited</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Adoption_Barrier_Comment_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>$Profile.Id != $Setup.ProfileID__c.Cisco_ADMIN__c &amp;&amp;
$Profile.Id != $Setup.ProfileID__c.Cisco_Data_Migration__c &amp;&amp;
$Profile.Id != $Setup.ProfileID__c.Cisco_Integration_Echo_Suppression__c &amp;&amp; 
AND(ISBLANK(Adoption_Barrier_Comment__c ) &amp;&amp;
NOT(ISBLANK( Adoption_Barrier__c )))</errorConditionFormula>
        <errorMessage>Please enter Adoption Barrier comments</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PreventStageModification</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Offer_Stages__c) &amp;&amp;  !TECH_isOfferCanBeUpdated__c</errorConditionFormula>
        <errorMessage>Cannot update stage directly from Customer Kanban</errorMessage>
    </validationRules>
</CustomObject>